--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ targetCompatibility = 1.8
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     testCompile("org.springframework.boot:spring-boot-starter-test")
+    compile("org.springframework.boot:spring-boot-starter-aop:2.5.2")
     compile("com.amazonaws:aws-java-sdk-dynamodb")
     compile("com.amazonaws:aws-java-sdk-sns")
     compile("com.fasterxml.jackson.core:jackson-databind:2.8.11")
@@ -38,6 +39,7 @@ dependencies {
     testRuntime("org.junit.jupiter:junit-jupiter-engine:5.0.3")
     compile("com.amazonaws:aws-xray-recorder-sdk-core")
     compile("com.amazonaws:aws-xray-recorder-sdk-aws-sdk")
+    compile("com.amazonaws:aws-xray-recorder-sdk-spring:2.11.0")
     compile("com.amazonaws:aws-xray-recorder-sdk-aws-sdk-instrumentor")
     compile("com.amazonaws:aws-xray-recorder-sdk-apache-http")
     compile("com.amazonaws:aws-xray-recorder-sdk-sql-postgres")
